@startuml
'https://plantuml.com/class-diagram

abstract class Pizza {
    +prepare(): void
    +bake(): void
    +cut(): void
    +box(): void
}

Pizza <|-- CheesePizza
Pizza <|-- GreekPizza
Pizza <|-- PepperPizza

class SimpleFactory

OrderPizza o-- SimpleFactory
OrderPizza2 o-- SimpleFactory
OrderPizza3 o-- SimpleFactory

@enduml